# game_library

./: .gitignore  CMakeLists.txt  LICENCE  README.md
docs/ref/: cmakeファイルコマンド.md
includes/: succ.h
src/: main.c  succ.c
test/testcase/: test_succ.c
test/testrunner/: all_tests.c  succ_test_runner.c
